# ats-gap-analyser

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 01-setup.ipynb  02-rag.ipynb  03-agent.ipynb
