[project]
name = "ats-gap-analyser"
version = "0.1.0"
description = "AI agent that analyses CV and job description fit, identifies ATS gaps, and generates improvement suggestions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]
